prod/rhino-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rhino-deployment
  namespace: prod
  labels:
    app: rhino
spec:
  replicas: 4
  template:
    spec:
      containers:
        - name: rhino
          image: southamerica-east1-docker.pkg.dev/diesel-talon-387022/rhino-prod/rhino:1eb4f03497e932b21b0fdb3f36e26657e0b7cd93
          imagePullPolicy: Always
          resources:
            requests:
              memory: "500Mi"
              cpu: "500m"
            limits:
              memory: "1200Mi"
              cpu: "700m"
          ports:
            - containerPort: 80
