prod/rhino-ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  namespace: rhino-test
  annotations:
    ingress.gcp.kubernetes.io/pre-shared-cert: rhino-certificado-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
    networking.gke.io/managed-certificates: managed-cert
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - host: api.rhinox.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rhino-deployment-service
            port:
              number: 80
  defaultBackend:
    service:
      name: rhino-deployment-service
      port:
        number: 80
